--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@tabler/icons": "^1.105.0",
+        "axios": "^1.1.3",
         "clsx": "^1.2.1",
         "eslint": "^8.28.0",
         "react": "^18.2.0",
